k8s/namespace.yaml
# microk8s kubectl create namespace go-redmine-ish
apiVersion: v1
kind: Namespace
metadata:
  name: go-redmine-ish
