k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-redmine-ish-golang-app
  namespace: go-redmine-ish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-redmine-ish-golang-app
  template:
    metadata:
      labels:
        app: go-redmine-ish-golang-app
    spec:
      containers:
      - name: go-redmine-ish-golang-app
        image: localhost:32000/go-redmine-ish-golang-app:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 32Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
