k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-redmine-ish-golang-service
  namespace: dummy-issue-namespace
spec:
  ports:
    - name: http-port
      port: 8080
      targetPort: 8080 # Debe coincidir con el puerto expuesto por el contenedor
      protocol: TCP
  selector:
    app: go-redmine-ish-golang-app # Asegúrate de que coincida con las etiquetas del pod
