k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-redmine-ish-ingress
  namespace: go-redmine-ish
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: public
  rules:
    - host: issues.mydomain.com
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: go-redmine-ish-golang-service
                port:
                  number: 8080
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: vite-redmine-ish-app-service
                port:
                  number: 80
